test/macro/fail/setCount2.em
# Set something not yet supported

# Arg: --ast2
# Expect failure

a 3 = 3